feat: миграция на PostgreSQL и интеграция NextAuth.js с Google OAuth
- Добавлена поддержка PostgreSQL через Drizzle ORM
- Интегрирован NextAuth.js v5 для аутентификации
- Добавлена поддержка Google OAuth провайдера
- Создан репозиторий для работы с пользователями в БД
- Обновлены API endpoints для работы с новой системой аутентификации
- Обновлен middleware для поддержки NextAuth сессий
- Добавлена документация по миграции и настройке Vercel Postgres
- Исправлены ошибки линтера: добавлены await для асинхронных вызовов

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,17 @@
-NAV_V1=on
-APP_LOCALE=ru
-FEATURE_PROJECTS_V1=1
-NEXT_PUBLIC_FEATURE_PROJECTS_V1=1
-AUTH_DEV=on
-# Finance expenses storage driver (memory|db, defaults: dev=memory, staging/prod=db)
-FIN_EXPENSES_STORAGE=memory
-DEMO_ADMIN_EMAIL=admin.demo@collabverse.test
-DEMO_ADMIN_PASSWORD=demo-admin
-DEMO_USER_EMAIL=user.demo@collabverse.test
-DEMO_USER_PASSWORD=demo-user
-# SKIP_VERCEL_BUILD=1
-# Feature flags (2nd generation, 1 — enabled, 0 — disabled)
-NEXT_PUBLIC_FEATURE_FINANCE_GLOBAL=1
-NEXT_PUBLIC_FEATURE_PROJECTS_OVERVIEW=1
-NEXT_PUBLIC_FEATURE_CREATE_WIZARD=1
-NEXT_PUBLIC_FEATURE_PROJECT_DASHBOARD=1
-NEXT_PUBLIC_FEATURE_BUDGET_LIMITS=0
-NEXT_PUBLIC_FEATURE_TASKS_WORKSPACE=1
-NEXT_PUBLIC_FEATURE_FINANCE_AUTOMATIONS=0
+# Database (Vercel Postgres)
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/collabverse
+AUTH_STORAGE=db
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+AUTH_SECRET=
+NEXTAUTH_URL=http://localhost:3000
+
+# Authentication (NextAuth.js)
+# Generate a random string: openssl rand -base64 32
+AUTH_SECRET=changeme_dev_secret_at_least_32_chars_long
+AUTH_STORAGE=memory # 'memory' or 'db'
+NEXTAUTH_URL=http://localhost:3000
+
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
