--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,16 +15,20 @@
     "check:routes": "node scripts/check-app-routes.mjs"
   },
   "dependencies": {
+    "@auth/core": "^0.34.3",
+    "@auth/drizzle-adapter": "^1.11.1",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/utilities": "^3.2.1",
     "@tanstack/react-virtual": "^3.10.8",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.7",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.546.0",
     "nanoid": "^3.3.11",
     "next": "14.2.4",
+    "next-auth": "5.0.0-beta.30",
     "openai": "^4.68.0",
     "react": "18.3.1",
     "react-big-calendar": "^1.19.4",
