--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "collabverse-monorepo",
   "private": true,
   "version": "0.1.0",
-  "engines": { "node": ">=20", "pnpm": ">=9" },
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">=9"
+  },
   "scripts": {
     "dev": "pnpm --filter @collabverse/web dev",
     "dev:simple": "bash scripts/dev-simple.sh",
@@ -37,26 +40,29 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
+    "@playwright/test": "^1.46.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
-    "eslint-plugin-import": "^2.29.1",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^9.0.11",
-    "prettier": "^3.3.2",
-    "typescript": "5.5.3",
-    "@types/node": "^20.12.12",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "@types/jest": "^29.5.12",
     "markdown-link-check": "^3.11.2",
     "markdownlint-cli": "^0.39.0",
-    "@playwright/test": "^1.46.0",
-    "vercel": "^37.14.0",
-    "tsx": "^4.16.5"
+    "prettier": "^3.3.2",
+    "ts-jest": "^29.1.2",
+    "tsx": "^4.16.5",
+    "typescript": "5.5.3",
+    "vercel": "^37.14.0"
   },
-  "packageManager": "pnpm@9.12.2"
+  "packageManager": "pnpm@9.12.2",
+  "dependencies": {
+    "server-only": "^0.0.1"
+  }
 }
