fix: исправлена логика определения build-time vs runtime для AUTH_SECRET
- Исправлена логика в get-auth-secret.ts для корректного различения build-time и runtime
- Используется NEXT_PHASE для определения фазы сборки
- Добавлен скрипт validate-env.mjs для проверки переменных окружения
- Обновлен prebuild скрипт для запуска валидации
- Обновлена документация README.md с обязательным AUTH_SECRET

Исправляет ошибку сборки на Vercel: 'AUTH_SECRET is required in production runtime'

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prebuild": "node scripts/clean-next.mjs",
+    "prebuild": "node scripts/clean-next.mjs && node scripts/validate-env.mjs",
     "dev": "next dev",
     "dev:3001": "next dev -p 3001",
     "dev:3002": "next dev -p 3002",
