--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "vercel-build": "pnpm -C apps/web build"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@eslint/eslintrc": "^3.1.0",
     "@playwright/test": "^1.46.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
+    "babel-jest": "^30.2.0",
     "dotenv": "^17.2.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
