--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,10 @@
     "@auth/drizzle-adapter": "^1.11.1",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/utilities": "^3.2.1",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-virtual": "^3.10.8",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
@@ -34,6 +38,7 @@
     "react-big-calendar": "^1.19.4",
     "react-dom": "18.3.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
