--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/parser": "^7.16.1",
     "babel-jest": "^30.2.0",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "eslint-import-resolver-typescript": "^3.6.1",
