--- a/.mlc.config.json
+++ b/.mlc.config.json
@@ -1,8 +1,13 @@
 {
   "ignorePatterns": [
     { "pattern": "^https?://localhost" },
-    { "pattern": "^http://127\\.0\\.0\\.1" }
+    { "pattern": "^http://127\\.0\\.0\\.1" },
+    { 
+      "pattern": "^https://platform\\.openai\\.com",
+      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+    }
   ],
   "retryOn429": true,
-  "timeout": "10s"
+  "timeout": "10s",
+  "_comment": "To enable OpenAI link checking, set environment variable MLC_CHECK_OPENAI=true before running markdown-link-check"
 }
