fix: исправлен pm-pg-adapter для работы с @vercel/postgres и добавлен seed-скрипт
- Заменен sql.raw() на sql.query() с параметризованными запросами
- Исправлены все SQL-запросы для совместимости с @vercel/postgres
- Добавлен seed-скрипт для заполнения демо-данных в Postgres
- Добавлена поддержка хранения проектов/задач/комментариев в БД
- Интегрирована синхронизация с Postgres в repositories
- Добавлен скрипт seed:demo-pg в package.json
- Обновлен .gitignore для исключения .tmp/ директории

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "docs:lint": "markdownlint '**/*.md' --ignore node_modules",
     "docs:links": "node scripts/check-docs-links.mjs",
     "seed:finance": "tsx scripts/seed-finance.ts",
+    "seed:demo-pg": "tsx scripts/seed-demo-postgres.ts",
     "seed:test-project": "tsx scripts/seed-test-project.ts",
     "reset:ai-agents": "tsx scripts/reset-ai-agents.ts",
     "prepare": "husky install",
