--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
     "build": "next build && node scripts/fix-manifests.mjs",
     "start": "next start",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "check:routes": "node scripts/check-app-routes.mjs"
+    "check:routes": "node scripts/check-app-routes.mjs",
+    "index-assistant-docs": "npx tsx scripts/index-assistant-docs.ts"
   },
   "dependencies": {
     "@auth/core": "^0.34.3",
