--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prebuild": "node scripts/clean-next.mjs && node scripts/validate-env.mjs",
+    "prebuild": "node scripts/clean-next.mjs && node scripts/validate-env.mjs && node scripts/index-docs-if-enabled.mjs",
+    "build": "next build && node scripts/fix-manifests.mjs",
     "dev": "next dev",
     "dev:3001": "next dev -p 3001",
     "dev:3002": "next dev -p 3002",
