feat: add chat functionality for projects and tasks
- Add AllChatsModal component for managing all chats
- Add InlineChat component for embedded chat in project/task views
- Add API routes for chat threads and messages (GET, POST, PATCH, DELETE)
- Fix TypeScript linting errors by replacing 'any' with proper types
- Add chatsModal store for managing chat modal state
- Remove apps/web/.env file (should be in .gitignore)
- Update project chat repository and websocket types

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,107 @@
-# Database (Vercel Postgres)
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/collabverse
+# Core
+NAV_V1=on
+APP_LOCALE=ru
+FEATURE_PROJECTS_V1=1
+AUTH_DEV=on
 AUTH_STORAGE=db
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-AUTH_SECRET=
-NEXTAUTH_URL=http://localhost:3000
-
-# Authentication (NextAuth.js)
-# Generate a random string: openssl rand -base64 32
 AUTH_SECRET=changeme_dev_secret_at_least_32_chars_long
-AUTH_STORAGE=memory # 'memory' or 'db'
+NEXTAUTH_SECRET=changeme_dev_secret_at_least_32_chars_long
 NEXTAUTH_URL=http://localhost:3000
+AUTH_TRUST_HOST=true
+NEXT_PHASE=phase-development-server
+NODE_ENV=development
 
-# Google OAuth
+# Demo accounts
+DEMO_ADMIN_EMAIL=admin.demo@collabverse.test
+DEMO_ADMIN_PASSWORD=admin.demo
+DEMO_USER_EMAIL=user.demo@collabverse.test
+DEMO_USER_PASSWORD=demo-user
+
+# Feature flags (server-side)
+FIN_EXPENSES_STORAGE=db
+FEATURE_FINANCE_AUTOMATIONS=0
+FEATURE_AI_V1=true
+AI_DEFAULT_PROVIDER=openai
+USE_DB_STORAGE=true
+
+# Public app metadata
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_ENABLE_TELEMETRY_LOGS=0
+
+# AI (OpenAI / assistant)
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_MAX_TOKENS=1000
+OPENAI_TEMPERATURE=0.7
+AI_ASSISTANT_API_KEY=
+AI_ASSISTANT_MODEL_CHAT=gpt-4o-mini
+AI_ASSISTANT_MODEL_EMBED=text-embedding-3-small
+AI_RATE_LIMIT_PER_ENDPOINT_HOUR=10
+AI_RATE_LIMIT_GLOBAL_HOUR=100
+AI_RATE_LIMIT_MIN_INTERVAL=3000
+AI_RATE_LIMIT_PER_USER_HOUR=20
+AI_MAX_REQUEST_COST=0.5
+
+# AI (Yandex optional)
+YANDEX_API_KEY=
+YANDEX_FOLDER_ID=
+YANDEX_MODEL_URI=yandexgpt/latest
+
+# Database (Neon / Postgres)
+POSTGRES_PASSWORD=your-password
+POSTGRES_DATABASE=neondb
+PGPASSWORD=your-password
+PGDATABASE=neondb
+PGHOST_UNPOOLED=your-neon-host
+PGUSER=neondb_owner
+POSTGRES_URL_NO_SSL=postgresql://neondb_owner:your-password@your-neon-host/neondb
+POSTGRES_HOST=your-neon-host
+NEON_PROJECT_ID=your-neon-project-id
+POSTGRES_URL=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
+POSTGRES_PRISMA_URL=postgresql://neondb_owner:your-password@your-neon-host/neondb?connect_timeout=15&sslmode=require
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
+PGHOST=your-neon-host
+POSTGRES_USER=neondb_owner
+DATABASE_URL=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
+
+# OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Public feature flags (frontend)
+NEXT_PUBLIC_FEATURE_AI_ASSISTANT=true
+NEXT_PUBLIC_FEATURE_AI_V1=true
+NEXT_PUBLIC_FEATURE_PM_NAV_PROJECTS_AND_TASKS=1
+NEXT_PUBLIC_FEATURE_PM_PROJECTS_LIST=1
+NEXT_PUBLIC_FEATURE_PM_PROJECT_CARD=1
+NEXT_PUBLIC_FEATURE_PM_TASKS_BOARD=1
+NEXT_PUBLIC_FEATURE_PM_TASKS_LIST=1
+NEXT_PUBLIC_FEATURE_PM_TASKS_CALENDAR=1
+NEXT_PUBLIC_FEATURE_PM_DASHBOARD=1
+NEXT_PUBLIC_FEATURE_PROJECTS_V1=1
+NEXT_PUBLIC_FEATURE_CREATE_WIZARD=1
+NEXT_PUBLIC_FEATURE_PROJECTS_OVERVIEW=1
+NEXT_PUBLIC_FEATURE_PROJECT_DASHBOARD=1
+NEXT_PUBLIC_FEATURE_BUDGET_LIMITS=0
+NEXT_PUBLIC_FEATURE_TASKS_WORKSPACE=1
+NEXT_PUBLIC_FEATURE_FINANCE_AUTOMATIONS=0
+NEXT_PUBLIC_FEATURE_FINANCE_GLOBAL=1
+NEXT_PUBLIC_VITE_FEATURE_RAIL=1
+NEXT_PUBLIC_WS_ENABLED=0
+NEXT_PUBLIC_WS_URL=
+NEXT_PUBLIC_WS_ORIGIN=http://localhost:3000
+
+# Websocket / misc
+WS_HOST=localhost
+WS_PORT=8080
+VITE_FEATURE_RAIL=1
+SKIP_VERCEL_BUILD=
+VERCEL=0
+VERCEL_ENV=development
+CI=0
+
+# Optional checks / tests
+MLC_CHECK_OPENAI=0
+JEST_WORKER_ID=
