--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ test-results
 .tmp/
 .ai-assistant/
 .env
+
+# Temporary files
+*.log
+debug-export.ndjson
+playwright-output*.txt
+test-output.txt
+.cursor/
