--- a/.mlc.config.json
+++ b/.mlc.config.json
@@ -1,10 +1,34 @@
 {
   "ignorePatterns": [
     {
+      "pattern": "^#",
+      "description": "Skip same-page anchor links (markdown-link-check limitation)"
+    },
+    {
       "pattern": "^https?://localhost"
     },
     {
       "pattern": "^http://127\\.0\\.0\\.1"
+    },
+    {
+      "pattern": "^https://platform\\.openai\\.com",
+      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+    },
+    {
+      "pattern": "^https://console\\.cloud\\.google\\.com",
+      "description": "Google Cloud Console often blocks automated link checks."
+    },
+    {
+      "pattern": "^https://platform\\.openai\\.com",
+      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+    },
+    {
+      "pattern": "^https://platform\\.openai\\.com",
+      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+    },
+    {
+      "pattern": "^https://platform\\.openai\\.com",
+      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
     },
     {
       "pattern": "^https://platform\\.openai\\.com",
