feat: implement organization closure functionality
- Add organization closure service with checkers for contracts, expenses, documents, marketing, and wallet
- Add archive management with expiry notifications and cleanup jobs
- Add API endpoints for organization closure and archive management
- Add UI components for closure preview, confirmation, and blockers
- Add archive viewing pages and download functionality
- Add database migrations for organization archives
- Add comprehensive documentation and tests

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,54 @@
-# Core
-NAV_V1=on
-APP_LOCALE=ru
-FEATURE_PROJECTS_V1=1
-AUTH_DEV=on
+# ============================================================
+# 🔧 COLLABVERSE - Environment Variables Template
+# ============================================================
+# Скопируйте этот файл в apps/web/.env.local и заполните значения
+# cp .env.example apps/web/.env.local
+# ============================================================
+
+# ------------------------------------------------------------
+# 🗄️ DATABASE (Neon/Vercel Postgres)
+# ------------------------------------------------------------
+# Получите эти значения из Vercel Dashboard -> Storage -> Postgres
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+POSTGRES_URL=postgresql://user:password@host/database?sslmode=require&pgbouncer=true
+DATABASE_URL_UNPOOLED=postgresql://user:password@host-unpooled/database?sslmode=require
+POSTGRES_URL_NON_POOLING=postgresql://user:password@host-unpooled/database?sslmode=require
+POSTGRES_URL_NO_SSL=postgresql://user:password@host/database
+POSTGRES_PRISMA_URL=postgresql://user:password@host/database?connect_timeout=15&sslmode=require
+
+# Neon specific
+NEON_PROJECT_ID=your-neon-project-id
+POSTGRES_HOST=your-host-pooler.aws.neon.tech
+PGHOST=your-host-pooler.aws.neon.tech
+PGHOST_UNPOOLED=your-host.aws.neon.tech
+POSTGRES_USER=neondb_owner
+PGUSER=neondb_owner
+POSTGRES_PASSWORD=your-password
+PGPASSWORD=your-password
+POSTGRES_DATABASE=neondb
+PGDATABASE=neondb
+
+# Storage settings
+USE_DB_STORAGE=true
 AUTH_STORAGE=db
-AUTH_SECRET=changeme_dev_secret_at_least_32_chars_long
-NEXTAUTH_SECRET=changeme_dev_secret_at_least_32_chars_long
-NEXTAUTH_URL=http://localhost:3000
+FIN_EXPENSES_STORAGE=db
+
+# ------------------------------------------------------------
+# 🔐 AUTHENTICATION
+# ------------------------------------------------------------
+# Сгенерируйте: openssl rand -base64 32
+AUTH_SECRET=your-secret-at-least-32-chars
 AUTH_TRUST_HOST=true
-NEXT_PHASE=phase-development-server
-NODE_ENV=development
+AUTH_DEV=on
+
+# NextAuth
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-secret-at-least-32-chars
+
+# Google OAuth (опционально)
+# Получите в Google Cloud Console
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 # Demo accounts
 DEMO_ADMIN_EMAIL=admin.demo@collabverse.test
@@ -17,62 +56,36 @@ DEMO_ADMIN_PASSWORD=admin.demo
 DEMO_USER_EMAIL=user.demo@collabverse.test
 DEMO_USER_PASSWORD=demo-user
 
-# Feature flags (server-side)
-FIN_EXPENSES_STORAGE=db
-FEATURE_FINANCE_AUTOMATIONS=0
-FEATURE_AI_V1=true
-AI_DEFAULT_PROVIDER=openai
-USE_DB_STORAGE=true
-
-# Public app metadata
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
-NEXT_PUBLIC_ENABLE_TELEMETRY_LOGS=0
-
-# AI (OpenAI / assistant)
-OPENAI_API_KEY=
+# ------------------------------------------------------------
+# 🤖 AI / OpenAI
+# ------------------------------------------------------------
+# Получите ключ на platform.openai.com
+OPENAI_API_KEY=sk-...
 OPENAI_MODEL=gpt-3.5-turbo
 OPENAI_MAX_TOKENS=1000
 OPENAI_TEMPERATURE=0.7
-AI_ASSISTANT_API_KEY=
+
+# AI Assistant (может быть другой ключ)
+AI_ASSISTANT_API_KEY=sk-...
 AI_ASSISTANT_MODEL_CHAT=gpt-4o-mini
 AI_ASSISTANT_MODEL_EMBED=text-embedding-3-small
+AI_DEFAULT_PROVIDER=openai
+
+# AI Rate Limits
 AI_RATE_LIMIT_PER_ENDPOINT_HOUR=10
 AI_RATE_LIMIT_GLOBAL_HOUR=100
 AI_RATE_LIMIT_MIN_INTERVAL=3000
 AI_RATE_LIMIT_PER_USER_HOUR=20
 AI_MAX_REQUEST_COST=0.5
 
-# AI (Yandex optional)
-YANDEX_API_KEY=
-YANDEX_FOLDER_ID=
-YANDEX_MODEL_URI=yandexgpt/latest
+# ------------------------------------------------------------
+# 🚀 FEATURE FLAGS
+# ------------------------------------------------------------
+# Navigation
+NAV_V1=on
 
-# Database (Neon / Postgres)
-POSTGRES_PASSWORD=your-password
-POSTGRES_DATABASE=neondb
-PGPASSWORD=your-password
-PGDATABASE=neondb
-PGHOST_UNPOOLED=your-neon-host
-PGUSER=neondb_owner
-POSTGRES_URL_NO_SSL=postgresql://neondb_owner:your-password@your-neon-host/neondb
-POSTGRES_HOST=your-neon-host
-NEON_PROJECT_ID=your-neon-project-id
-POSTGRES_URL=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
-POSTGRES_PRISMA_URL=postgresql://neondb_owner:your-password@your-neon-host/neondb?connect_timeout=15&sslmode=require
-DATABASE_URL_UNPOOLED=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
-POSTGRES_URL_NON_POOLING=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
-PGHOST=your-neon-host
-POSTGRES_USER=neondb_owner
-DATABASE_URL=postgresql://neondb_owner:your-password@your-neon-host/neondb?sslmode=require
-
-# OAuth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-
-# Public feature flags (frontend)
-NEXT_PUBLIC_FEATURE_AI_ASSISTANT=true
-NEXT_PUBLIC_FEATURE_AI_V1=true
+# Projects & Tasks
+FEATURE_PROJECTS_V1=1
 NEXT_PUBLIC_FEATURE_PM_NAV_PROJECTS_AND_TASKS=1
 NEXT_PUBLIC_FEATURE_PM_PROJECTS_LIST=1
 NEXT_PUBLIC_FEATURE_PM_PROJECT_CARD=1
@@ -80,28 +93,49 @@ NEXT_PUBLIC_FEATURE_PM_TASKS_BOARD=1
 NEXT_PUBLIC_FEATURE_PM_TASKS_LIST=1
 NEXT_PUBLIC_FEATURE_PM_TASKS_CALENDAR=1
 NEXT_PUBLIC_FEATURE_PM_DASHBOARD=1
-NEXT_PUBLIC_FEATURE_PROJECTS_V1=1
-NEXT_PUBLIC_FEATURE_CREATE_WIZARD=1
 NEXT_PUBLIC_FEATURE_PROJECTS_OVERVIEW=1
 NEXT_PUBLIC_FEATURE_PROJECT_DASHBOARD=1
-NEXT_PUBLIC_FEATURE_BUDGET_LIMITS=0
 NEXT_PUBLIC_FEATURE_TASKS_WORKSPACE=1
-NEXT_PUBLIC_FEATURE_FINANCE_AUTOMATIONS=0
-NEXT_PUBLIC_FEATURE_FINANCE_GLOBAL=1
-NEXT_PUBLIC_VITE_FEATURE_RAIL=1
-NEXT_PUBLIC_WS_ENABLED=0
-NEXT_PUBLIC_WS_URL=
-NEXT_PUBLIC_WS_ORIGIN=http://localhost:3000
+NEXT_PUBLIC_FEATURE_CREATE_WIZARD=1
 
-# Websocket / misc
+# AI Features
+NEXT_PUBLIC_FEATURE_AI_ASSISTANT=true
+NEXT_PUBLIC_FEATURE_AI_V1=true
+FEATURE_AI_V1=true
+
+# Finance Features
+NEXT_PUBLIC_FEATURE_FINANCE_GLOBAL=1
+NEXT_PUBLIC_FEATURE_BUDGET_LIMITS=0
+FEATURE_FINANCE_AUTOMATIONS=0
+NEXT_PUBLIC_FEATURE_FINANCE_AUTOMATIONS=0
+
+# UI Features
+NEXT_PUBLIC_VITE_FEATURE_RAIL=1
+VITE_FEATURE_RAIL=1
+
+# ------------------------------------------------------------
+# 🌐 APP SETTINGS
+# ------------------------------------------------------------
+APP_LOCALE=ru
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# WebSocket (опционально)
+NEXT_PUBLIC_WS_ENABLED=0
+NEXT_PUBLIC_WS_URL=ws://localhost:8080
+NEXT_PUBLIC_WS_ORIGIN=http://localhost:3000
 WS_HOST=localhost
 WS_PORT=8080
-VITE_FEATURE_RAIL=1
-SKIP_VERCEL_BUILD=
-VERCEL=0
-VERCEL_ENV=development
-CI=0
 
-# Optional checks / tests
+# ------------------------------------------------------------
+# 🔧 DEV / DEBUG
+# ------------------------------------------------------------
+NEXT_PUBLIC_ENABLE_TELEMETRY_LOGS=0
 MLC_CHECK_OPENAI=0
-JEST_WORKER_ID=
+
+# ------------------------------------------------------------
+# 🔴 YANDEX (опционально)
+# ------------------------------------------------------------
+# YANDEX_API_KEY=
+# YANDEX_FOLDER_ID=
+YANDEX_MODEL_URI=yandexgpt/latest
