--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-virtual": "^3.10.8",
+    "@types/archiver": "^7.0.0",
     "@vercel/speed-insights": "^1.2.0",
+    "archiver": "^7.0.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
