--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,16 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "pnpm --filter @collabverse/web build",
   "installCommand": "pnpm install",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "crons": [
+    {
+      "path": "/api/cron/cleanup-archives",
+      "schedule": "0 3 * * *"
+    },
+    {
+      "path": "/api/cron/archive-expiry-notifications",
+      "schedule": "0 9 * * *"
+    }
+  ]
 }
 
