feat: integrate file manager with projects and tasks
- Add file manager integration (files, folders, attachments, shares)
- Apply database migrations 0006 (organization archive) and 0007 (file manager)
- Add file trash system with retention limits based on subscription plans
- Add direct file upload support with Vercel Blob storage
- Add share links functionality (view/download scopes)
- Add task results folder support
- Fix ESLint configuration to exclude filebrowser-test directory
- Fix TypeScript errors in test files (add non-null assertions)
- Clean up archived documentation files
- Update CONTINUITY.md with current state

--- a/.env.example
+++ b/.env.example
@@ -134,6 +134,12 @@ NEXT_PUBLIC_ENABLE_TELEMETRY_LOGS=0
 MLC_CHECK_OPENAI=0
 
 # ------------------------------------------------------------
+# ⏰ CRON
+# ------------------------------------------------------------
+# Secret for Vercel cron endpoints (Authorization: Bearer <CRON_SECRET>)
+CRON_SECRET=your-cron-secret
+
+# ------------------------------------------------------------
 # 🔴 YANDEX (опционально)
 # ------------------------------------------------------------
 # YANDEX_API_KEY=
