fix(ci): установить POSTGRES_URL для тестов в CI
- Добавлена переменная окружения POSTGRES_URL для шага тестов
- Исправляет ошибку 'POSTGRES_URL is a placeholder' в unit тестах
- Тесты теперь могут импортировать модули с конфигурацией БД без ошибок

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
         run: npx playwright install --with-deps
       - run: pnpm -w lint
       - run: pnpm -w typecheck
-      - run: pnpm -w test
+      - name: Run tests
+        env:
+          POSTGRES_URL: postgresql://test:test@localhost:5432/testdb
+        run: pnpm -w test
       - run: pnpm docs:lint
       - run: pnpm docs:links
