fix: настройка локального тестирования и исправление drizzle.config.ts
- Исправлен drizzle.config.ts для поддержки POSTGRES_URL как fallback
- Добавлены скрипты для локального запуска тестов с БД:
  - test:local:setup - запуск локального Postgres в Docker
  - test:local - запуск тестов с локальной БД
  - test:local:cleanup - остановка локальной БД
  - test:local:env - запуск тестов с переменными из окружения
- Создана документация по локальному тестированию
- Добавлен анализ проблемы с CI и рекомендации
- Обновлен quick-start.md со ссылкой на документацию по тестированию

Решает проблему локального запуска db:push и тестов с БД.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "test": "jest",
     "test:update": "jest -u",
     "test:e2e": "pnpm --filter @collabverse/web build && playwright test",
+    "test:local": "bash scripts/test/local-test.sh",
+    "test:local:setup": "bash scripts/test/setup-local-db.sh",
+    "test:local:cleanup": "bash scripts/test/cleanup-local-db.sh",
+    "test:local:env": "bash scripts/test/test-with-env.sh",
     "verify:routes": "node scripts/build/verify-routes.mjs",
     "verify:preflight": "node scripts/build/verify-preflight.mjs",
     "ensure-env": "node scripts/utils/ensure-env.mjs",
