--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,23 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
     needs: verify-preflight
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+          POSTGRES_DB: testdb
+        options: >-
+          --health-cmd "pg_isready -U test -d testdb"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    env:
+      POSTGRES_URL: postgresql://test:test@localhost:5432/testdb
+      DATABASE_URL: postgresql://test:test@localhost:5432/testdb
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -35,9 +52,9 @@ jobs:
         run: npx playwright install --with-deps
       - run: pnpm -w lint
       - run: pnpm -w typecheck
+      - name: Apply database schema
+        run: pnpm --filter @collabverse/api db:push
       - name: Run tests
-        env:
-          POSTGRES_URL: postgresql://test:test@localhost:5432/testdb
         run: pnpm -w test
       - run: pnpm docs:lint
       - run: pnpm docs:links
