fix: ignore external domains that block automated link checks
- Remove duplicate OpenAI patterns (12 duplicates)
- Add ignore patterns for Upwork, Fiverr, Reddit, Toptal domains
- These sites return 403 Forbidden for automated requests
- Fixes check-links CI failure in PR #39

--- a/.mlc.config.json
+++ b/.mlc.config.json
@@ -19,52 +19,24 @@
       "description": "Google Cloud Console often blocks automated link checks."
     },
     {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+      "pattern": "^https://support\\.upwork\\.com",
+      "description": "Upwork support pages block automated link checks (403 Forbidden)"
     },
     {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+      "pattern": "^https://help\\.fiverr\\.com",
+      "description": "Fiverr help pages block automated link checks (403 Forbidden)"
     },
     {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+      "pattern": "^https://www\\.fiverr\\.com",
+      "description": "Fiverr pages block automated link checks (403 Forbidden)"
     },
     {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+      "pattern": "^https://www\\.reddit\\.com",
+      "description": "Reddit pages block automated link checks (403 Forbidden)"
     },
     {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
-    },
-    {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
-    },
-    {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
-    },
-    {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
-    },
-    {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
-    },
-    {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
-    },
-    {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
-    },
-    {
-      "pattern": "^https://platform\\.openai\\.com",
-      "description": "OpenAI links require authentication. Set MLC_CHECK_OPENAI=true to enable checking."
+      "pattern": "^https://www\\.toptal\\.com",
+      "description": "Toptal pages block automated link checks (403 Forbidden)"
     }
   ],
   "retryOn429": true,
