chore: exclude development and audit docs from git
- Add docs/development/, docs/_audit/, docs/audit/, docs/reorganization/ to .gitignore
- Remove these folders from git tracking (local development only)
- Keep only platform documentation (docs/platform/, docs/modules/, docs/getting-started/)

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ filebrowser-test/
 
 # Archived documentation (not for git)
 docs/archive/
+
+# Development documentation (local only, not for git)
+docs/development/
+docs/_audit/
+docs/audit/
+docs/reorganization/
