--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ DATABASE_URL_UNPOOLED=postgresql://user:password@host-unpooled/database?sslmode=
 POSTGRES_URL_NON_POOLING=postgresql://user:password@host-unpooled/database?sslmode=require
 POSTGRES_URL_NO_SSL=postgresql://user:password@host/database
 POSTGRES_PRISMA_URL=postgresql://user:password@host/database?connect_timeout=15&sslmode=require
+# Отдельная БД для истории AI-агентов (опционально)
+AI_AGENTS_DATABASE_URL=postgresql://user:password@host/ai_agents_db?sslmode=require
 
 # Neon specific
 NEON_PROJECT_ID=your-neon-project-id
