--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.44.7",
+    "openai": "^4.68.0",
     "postgres": "^3.4.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@auth/core": "^0.34.3",
