--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vercel-build": "pnpm -w typecheck && pnpm -C apps/web build"
   },
   "devDependencies": {
+    "openai": "^4.68.0",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@eslint/eslintrc": "^3.1.0",
